src/renderer/scss/component/_shapeshift.scss
// Can't think of a better way to do this
// The initial shapeshift form is 311px tall
// the .shapeshift__initial-wrapper class is only added when the form is being loaded
// Once the form is rendered, there is a very smooth transition because the height doesn't change
.shapeshift__wrapper.shapeshift__initial-wrapper {
  min-height: 346px;
}

.shapeshift__content {
  .spinner {
    margin-top: $spacing-vertical * 3;
  }
}

.shapeshift__tx-info {
  min-height: 55px;
}

.shapeshift__deposit-address-wrapper {
  display: flex;
  flex-direction: row;

  * {
    align-self: center;
  }
}

// this should be pulled out into it's own styling when we add more qr codes
.shapeshift__qrcode {
  // don't use a variable here. adds a white border for easier reading in dark mode
  // needs to stay the same no matter what theme is present
  background-color: #fff;
  padding: 2px;
  margin-left: 40px;
}


.shapeshift__link {
  padding-left: 10px;
}

